# bookpluck-api

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: ci.yml
app/: __init__.py
app/api/: hello.py
app/api/tests/: test_hello.py
