[tool.poetry]
name = "bookpluck-api"
version = "0.1.0"
description = "Bookpluck API is a Library Management System project developed exclusively for educational purposes."
authors = ["Pedro Dalvy <pedrodalvy@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
